--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
@@ -8,6 +8,7 @@
     <meta
       name="description"
       content="cv jean-pierre LEDOS"
+      author= "jean-pierre LEDOS"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/jpl192.png" />
     <!--
